@@ -10,4 +10,5 @@ github_slug=Textbook
 mod_version=2.2.0
 release_type=release
 # Dependencies
+annotateddi_version=2.0.4+1.17.1
 fireplacelib_version=6.2.2+1.17.1
